# mpc_rl

./: .gitignore  LICENSE  README.md  pyproject.toml
mpc_rl/dynamics/: __init__.py  dynamics.py
mpc_rl/infra/: replay_buffer.py
mpc_rl/network/: mlp.py
mpc_rl/planner/: mppi.py
mpc_rl/tasks/: pendulum.py
mpc_rl/utils/: __init__.py
scripts/: run_pendulum.py
